test/types/tuple/ferguson/tuple-from-array-for-error.good
tuple-from-array-for-error.chpl:10: error: illegal tuple variable declaration with non-tuple initializer
