test/types/tuple/ferguson/tuple-from-array-for-error.chpl
var A:[1..2][1..3] int;

A[1][1] = 11;
A[1][2] = 12;
A[1][3] = 13;
A[2][1] = 21;
A[2][2] = 22;
A[2][3] = 23;

for (a,b,c) in A {
  writeln("a=", a, " b=", b, " c=", c);
}
